# iz-examples

./: CMakeLists.txt  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf
src/: main.cpp
src/QML/: MainWindow.qml
src/QML/Pages/: ExampleSelector.qml  ListView.qml  TableView.qml
src/QML/Widgets/: ExampleListViewDelegateA.qml  ExampleListViewDelegateB.qml
